# -RK3588-PCB-YOLO-

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  example_dataset.yaml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: pcb_dataset.yaml
configs/deployment/: photo.txt  rknn_runtime.yaml
configs/models/: yolo11n-p2-pcb.yaml
docs/: DATASET.md  MODEL.md  RKNN_DEPLOYMENT.md
examples/: README.md
hardware/extension-board/: README.md  extension.csv  extension.kicad_pcb  extension.kicad_pro  extension.kicad_sch
models/: README.md
src/export/: export_onnx.py  onnx_to_rknn.py
src/gpio/: gpio_control.py
src/rknn/: pcb_detect.py
src/training/: predict_image.py  train_p2.py
ui/gtk/: meson.build
ui/gtk/src/: app.vala  config.vala  main.vala  window.vala
ui/gtk/src/models/: defect_info.vala  detection_record.vala
ui/gtk/src/services/: detector_runner.vala  hardware_service.vala  pipeline_service.vala  storage_service.vala
ui/gtk/src/widgets/: defect_list.vala  history_panel.vala  image_viewer.vala
ui/qt/: CMakeLists.txt
ui/qt/src/: main.cpp  main_window.cpp  main_window.h
